--- a/package.json
+++ b/package.json
@@ -7,10 +7,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "remove": "^0.1.5",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
-    "vite": "^2.7.2"
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.4.0",
+    "prettier": "^2.5.1",
+    "unplugin-auto-import": "^0.5.11",
+    "unplugin-vue-components": "^0.17.15",
+    "vite": "^2.7.2",
+    "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-style-import": "^1.4.1"
   }
 }
